--- a/src/app/feature/character/components/card-character/card-character.component.html
+++ b/src/app/feature/character/components/card-character/card-character.component.html
@@ -5,16 +5,16 @@
   <div class="card_info">
     <h2 class="card_info_name">{{ character.name }}</h2>
     <p class="card_info_status">
-      <strong>Status: </strong>{{ character.status }}
+      Status: {{ character.status }}
     </p>
     <p class="card_info_specie">
-      <strong>Specie: </strong> {{ character.species }}
+      Specie: {{ character.species }}
     </p>
     <p class="card_info_episode">
-      <strong>First Episode: </strong> {{ character.firstEpisode }}
+      First Episode: {{ character.firstEpisode }}
     </p>
     <p class="card_info_place">
-      <strong>Location: </strong> <a [routerLink]="'/location' + character.location.url.slice(40) ">{{ character.location.name }}</a>
+      Location: <a [routerLink]="'/location' + character.location.url.slice(40) ">{{ character.location.name }}</a>
     </p>
   </div>
 </div>
