--- a/src/app/feature/character/components/home/home.component.html
+++ b/src/app/feature/character/components/home/home.component.html
@@ -6,7 +6,7 @@
 
 <div class="pagination">
   <ngb-pagination
-    [collectionSize]="totalItems"
+    [collectionSize]="420"
     [(page)]="page"
     [maxSize]="5"
     [rotate]="true"
