--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,43 @@
-<nav>
-  <ul>
-    <li>Home</li>
-    <li>Episodios</li>
-  </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a
+      class="navbar-brand"
+      [routerLink]="'/'"
+      routerLinkActive="router-link-active"
+      ><img src="../../../../assets/rick.png" alt="" style="width: 40px" /> Rick
+      And Morty</a
+    >
+    <button
+      class="navbar-toggler"
+      type="button"
+      (click)="navbarCollapsed = !navbarCollapsed"
+      [attr.aria-expanded]="!navbarCollapsed"
+      aria-controls="navbarContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" [ngbCollapse]="navbarCollapsed" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a
+          class="nav-link"
+          [routerLink]="['/']"
+          routerLinkActive="router-link-active"
+          >Characters</a
+        >
+        </li>
+        <li class="nav-item">
+          <a
+          class="nav-link"
+          [routerLink]="['/episodes']"
+          routerLinkActive="router-link-active"
+          >Episodes</a
+        >
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
