--- a/src/app/feature/character/components/place-character/place-character.component.html
+++ b/src/app/feature/character/components/place-character/place-character.component.html
@@ -8,16 +8,14 @@
       <p class="location_card_info">
         <strong>Dimension: </strong> {{ location.dimension }}
       </p>
-      <p class="location_card_info">
-        <strong>ID: </strong> {{ location.id }}
-      </p>
+      <p class="location_card_info"><strong>ID: </strong> {{ location.id }}</p>
     </div>
     <div class="card_info_rigth">
       <p class="location_card_info">
         <strong>Type: </strong> {{ location.type }}
       </p>
       <p class="location_card_info">
-        <strong>Created: </strong> {{ location.created }}
+        <strong>Created: </strong> {{ location.created |  date:'longDate' }}
       </p>
       <p class="location_card_info">
         <strong>Url: </strong> <a [href]="location.url">{{ location.url }}</a>
