sticky footer add

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,3 +1,5 @@
-<footer class="footer">
-  Cesar David Botina Chacón © {{ anio }}
+<footer id="sticky-footer" class="flex-shrink-0 py-4 text-white-50">
+  <div class="container text-center">
+    <small>Copyright &copy; Cesar David Botina - {{ anio }}</small>
+  </div>
 </footer>
