--- a/src/app/feature/character/components/place-character/place-character.component.scss
+++ b/src/app/feature/character/components/place-character/place-character.component.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   max-width: 1920px;
+  height: 83vh;
   padding: 30px;
 
   &_button {
@@ -13,18 +14,23 @@
     border: 1px solid rgb(168, 166, 166);
     border-radius: var(--border-radius);
     width: 125px;
-  }
 
-  &_button:hover {
-    background-color: rgb(192, 189, 189);
-    transition: .3s;
+    &:hover{
+      background-color: rgb(192, 189, 189);
+      transition: .3s;
+    }
+
+    @media (max-width: 800px) {
+      font-size: 15px;
+      padding: 4px;
+      width: 95px;
+    }
   }
 
   &_card {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
     align-items: center;
-    width: 60%;
+    width: 40%;
     margin-top: 35px;
     text-align: center;
     background: var(--color-secundary) none repeat scroll 0 0;
@@ -33,8 +39,6 @@
     padding: 30px;
 
     @media (max-width: 800px) {
-      display: flex;
-      flex-direction: column;
       width: 350px;
     }
 
