--- a/src/app/feature/character/components/home/home.component.scss
+++ b/src/app/feature/character/components/home/home.component.scss
@@ -16,3 +16,9 @@
 ngb-pagination ::ng-deep a {
   color: black !important;
 }
+
+.country-filters {
+  margin: 2rem 1rem;
+  display: flex;
+  justify-content: center;
+}
