--- a/src/app/feature/character/components/home/home.component.scss
+++ b/src/app/feature/character/components/home/home.component.scss
@@ -17,7 +17,7 @@ ngb-pagination ::ng-deep a {
   color: black !important;
 }
 
-.country-filters {
+.characters-filters {
   margin: 2rem 1rem;
   display: flex;
   justify-content: center;
