--- a/src/app/feature/episodes/components/card-episodes/card-episodes.component.html
+++ b/src/app/feature/episodes/components/card-episodes/card-episodes.component.html
@@ -1,6 +1,6 @@
 <div class="card" *ngIf="episode">
   <div class="card_info">
-    <h2 class="card_info_date">{{ episode.name }}</h2>
+    <h2 class="card_info_name">{{ episode.name }}</h2>
     <p class="card_info_date">Air Date: {{ episode.air_date | date:'longDate' }}</p>
     <p class="card_info_episode">
      Episode: {{ episode.episode }}
