--- a/src/app/shared/components/drop-down/drop-down.component.html
+++ b/src/app/shared/components/drop-down/drop-down.component.html
@@ -1,6 +1,6 @@
 <div class="dropdown">
   <div class="dropdown-label" (click)="toggleOptions()">
-    <span>{{ regionSelect() }}</span>
+    <span>{{ statusSelect() }}</span>
     🔽
   </div>
   <ul
