--- a/src/app/feature/episodes/components/list-episodes/list-episodes.component.html
+++ b/src/app/feature/episodes/components/list-episodes/list-episodes.component.html
@@ -5,7 +5,7 @@
   </div>
 </section>
 
-<div class="pagination">
+<div class="pagination" *ngIf="episodes">
   <ngb-pagination
     [collectionSize]="30"
     [(page)]="page"
